app/demo-gateway/manifests/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${gateway_name}
  namespace: ${gateway_namespace}
  labels:
    app.kubernetes.io/name: ${gateway_name}
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: bnk-demo
    app.kubernetes.io/managed-by: bnk-forge
spec:
  gatewayClassName: ${gatewayclass_name}
  addresses:
    - type: IPAddress
      value: ${gateway_vip}
  listeners:
    - name: standard-http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: smart-http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
